# Nucleo_bf303_bsp_cmake

./: BSP_Nucleo_F303.ioc  CMakeLists.txt  README.md  toolchain-arm-none-eabi.cmake
Inc/: main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
Src/: gpio.c  main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  usart.c
